--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
     <link rel="canonical" href="http://turnamenslot.xy2401.com/">
 	<link rel="amphtml" href="https://turnamenslot.ampasia2016.com/">
-  <meta name="google-site-verification" content="krHg5Ztr1_swf3j_w47zf11EY8LDzSKyOAL8xnM0IgE" />
+	<meta name="google-site-verification" content="krHg5Ztr1_swf3j_w47zf11EY8LDzSKyOAL8xnM0IgE" />
     <meta name="robots" content="index, follow">
     <meta name="page-locale" content="id">
     <meta name="language" content="id">
@@ -296,218 +296,183 @@ th {
     <p><strong>Turnamen Slot Bahantoto - Season 1</strong> menjanjikan pengalaman bermain game slot yang tak terlupakan. Dengan hadiah besar, persaingan sengit, dan beragam permainan slot menarik, turnamen ini adalah kesempatan Anda untuk menjadi bintang di dunia slot online. Daftarkan diri Anda sekarang dan tunjukkan bahwa Anda adalah pemain slot terbaik!</p>
 </div>
  <center><h2>Klasemen Turnover Sementara</h2><center>
-<head>
-    <style>
-        .styled-table {
-            border-collapse: collapse;
-            margin: 25px 0;
-            font-size: 0.9em;
-            font-family: sans-serif;
-            min-width: 400px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-        }
-        .styled-table thead tr {
-            background-color: #ffffff;
-            color: #ffffff;
-            text-align: left;
-        }
-        .styled-table th,
-        .styled-table td {
-            padding: 12px 15px;
-        }
-        .styled-table tbody tr {
-            border-bottom: 1px solid #dddddd;
-        }
-
-        .styled-table tbody tr:nth-of-type(even) {
-            background-color: #333333;
-        }
-
-        .styled-table tbody tr:last-of-type {
-            border-bottom: 2px solid #ffffff;
-        }
-        .styled-table tbody tr.active-row {
-            font-weight: bold;
-            color: #ffffff;
-        }
-    </style>
-</head>
-<body>
-
-<table class="styled-table">
-    <thead>
-        <tr>
-            <th>Username</th>
-            <th>Minggu Pertama</th>
-            <th>Minggu Kedua</th>
-            <th>Minggu Ketiga</th>
-            <th>Minggu Keempat</th>
-            <th>Total Turnover</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="active-row">
-            <td>user1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-        <tr class="active-row">
-            <td>user2</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user3</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user4</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user5</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user6</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user7</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user8</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user9</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user10</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-        <tr class="active-row">
-            <td>user11</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-        <tr class="active-row">
-            <td>user12</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user13</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user14</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user15</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user16</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user17</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user18</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        </tr>
-		        <tr class="active-row">
-            <td>user19</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-		        <tr class="active-row">
-            <td>user20</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-    </tbody>
-</table>
+    <!-- Table Section -->
+    <div class="table-section">
+        <table>
+            <caption>Detail Turnamen Slot Bahantoto - Season 1</caption>
+            <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Minggu Pertama</th>
+                    <th>Minggu Kedua</th>
+                    <th>Minggu Ketiga</th>
+                    <th>Minggu Keempat</th>
+                    <th>Total Turnover</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>User 01</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+                <tr>
+                    <td>User 02</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+                <tr>
+                    <td>User 03</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 04</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 05</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 06</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 07</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 08</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 09</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 10</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 11</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 12</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 13</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 14</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 15</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 16</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 17</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 18</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 19</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+				                <tr>
+                    <td>User 20</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+					<td>0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
