--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ th {
     </ol>
 
     <!-- Table Section -->
-    <div class="table-section">
-        <table>
+<div class="table-responsive">
+    <table class="table">
             <caption>Detail Turnamen Slot Bahantoto - Season 1</caption>
             <thead>
                 <tr>
@@ -297,9 +297,8 @@ th {
 </div>
  <center><h2>Klasemen Turnover Sementara</h2><center>
     <!-- Table Section -->
-    <div class="table-section">
-        <table>
-            <caption>Detail Turnamen Slot Bahantoto - Season 1</caption>
+<div class="table-responsive">
+    <table class="table">
             <thead>
                 <tr>
                     <th>Username</th>
