--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	<meta name="description" content="Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini.">
 	
     <link rel="canonical" href="http://turnamenslot.xy2401.com/">
-	<link rel="amphtml" href="https://turnamenslot.ampasia2016.com/">
+	<link rel="amphtml" href="https://turnamen.ampasia2016.com/">
 	<meta name="google-site-verification" content="krHg5Ztr1_swf3j_w47zf11EY8LDzSKyOAL8xnM0IgE" />
     <meta name="robots" content="index, follow">
     <meta name="page-locale" content="id">
     <meta name="language" content="id">
     <meta name="rating" content="general">
-    <meta name="copyright" content="Slot Zeus">
-    <meta name="author" content="Slot Zeus">
-    <meta name="og:site_name" content="Slot Zeus">
+    <meta name="copyright" content="Turnamen Slot">
+    <meta name="author" content="Turnamen Slot">
+    <meta name="og:site_name" content="Turnamen Slot">
     <meta name="distribution" content="global">
     <meta name="geo.country" content="ID">
     <meta name="geo.region" content="ID">
@@ -23,11 +23,11 @@
     <meta name="tgn.nation" content="Indonesia">
     <meta name="og:locale" content="id_ID">
 	
-	<link rel="preload" as="image" href="https://i.ibb.co/zmgR6DG/Turnamen-Slot.png">
+	<link rel="preload" as="image" href="https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg">
 
     <meta property="og:title" content="Turnamen Slot Bahantoto - Season 1">
     <meta property="og:description" content="Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini.">
-    <meta property="og:image" content="https://i.ibb.co/zmgR6DG/Turnamen-Slot.png">
+    <meta property="og:image" content="https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg">
 	
 	<link rel="icon" href="https://i.ibb.co/9gccgL9/Stars.png" type="image/png" sizes="64x64">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -48,7 +48,7 @@
   },
   "primaryImageOfPage": {
     "@type": "ImageObject",
-    "url": "https://i.ibb.co/zmgR6DG/Turnamen-Slot.png",
+    "url": "https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg",
     "width": "280",
     "height": "226"
   },
@@ -79,7 +79,7 @@
       "name": "Turnamen Slot",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://i.ibb.co/zmgR6DG/Turnamen-Slot.png"
+        "url": "https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg"
       }
     },
     "description": "Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini."
