--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Turnamen Slot Bahantoto - Season 1</title>
 	<meta name="description" content="Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini.">
 	
-    <link rel="canonical" href="http://turnamenslot.xy2401.com/">
+    <link rel="canonical" href="http://turnamenslot-bahantoto.xy2401.com/">
 	<link rel="amphtml" href="https://turnamen.ampasia206.com/">
 	<meta name="google-site-verification" content="krHg5Ztr1_swf3j_w47zf11EY8LDzSKyOAL8xnM0IgE" />
     <meta name="robots" content="index, follow">
