--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta name="page-locale" content="id">
     <meta name="language" content="id">
     <meta name="rating" content="general">
-    <meta name="copyright" content="Turnamen Slot">
-    <meta name="author" content="Turnamen Slot">
-    <meta name="og:site_name" content="Turnamen Slot">
+    <meta name="copyright" content="Turnamen Slot Bahantoto">
+    <meta name="author" content="Turnamen Slot Bahantoto">
+    <meta name="og:site_name" content="Turnamen Slot Bahantoto">
     <meta name="distribution" content="global">
     <meta name="geo.country" content="ID">
     <meta name="geo.region" content="ID">
@@ -23,13 +23,13 @@
     <meta name="tgn.nation" content="Indonesia">
     <meta name="og:locale" content="id_ID">
 	
-	<link rel="preload" as="image" href="https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg">
+	<link rel="preload" as="image" href="https://i.imgur.com/W3Af4cB.jpg">
 
     <meta property="og:title" content="Turnamen Slot Bahantoto - Season 1">
     <meta property="og:description" content="Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini.">
-    <meta property="og:image" content="https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg">
+    <meta property="og:image" content="https://i.imgur.com/W3Af4cB.jpg">
 	
-	<link rel="icon" href="https://i.ibb.co/9gccgL9/Stars.png" type="image/png" sizes="64x64">
+	<link rel="icon" href="https://i.imgur.com/BGwo21H.png" type="image/png" sizes="64x64">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -48,7 +48,7 @@
   },
   "primaryImageOfPage": {
     "@type": "ImageObject",
-    "url": "https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg",
+    "url": "https://i.imgur.com/W3Af4cB.jpg",
     "width": "280",
     "height": "226"
   },
@@ -79,7 +79,7 @@
       "name": "Turnamen Slot",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://i.ibb.co/3W9X3pn/Turnamen-Slot-Season-1.jpg"
+        "url": "https://i.imgur.com/W3Af4cB.jpg"
       }
     },
     "description": "Ikuti keseruan Turnamen Slot Bahantoto - Season 1. Saksikan aksi kompetitif para pemain slot terbaik dalam event gaming terbesar tahun ini."
@@ -236,7 +236,7 @@ th {
 <div class="container">
 
     <div class="img-container">
-        <amp-img src="https://i.ibb.co/zmgR6DG/Turnamen-Slot.png" alt="Turnamen Slot Bahantoto" width="280" height="216"></amp-img>
+        <amp-img src="https://i.imgur.com/BGwo21H.png" alt="Turnamen Slot Bahantoto" width="280" height="216"></amp-img>
     </div>
 
     <div class="btn-container">
