--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ th {
 <div class="container">
 
     <div class="img-container">
-        <amp-img src="https://i.imgur.com/BGwo21H.png" alt="Turnamen Slot Bahantoto" width="280" height="216"></amp-img>
+        <amp-img src="https://i.imgur.com/OD2qKaB.png" alt="Turnamen Slot Bahantoto" width="280" height="216"></amp-img>
     </div>
 
     <div class="btn-container">
